--- a/painter/style.css
+++ b/painter/style.css
@@ -52,14 +52,14 @@ label {
    margin-top: 1rem;
 }
 
-.clear {
+.clear, .download {
     border: none;
     border-radius: 5px;
     background-color: #fff;
     cursor: pointer;
     padding: 4px;
 }
-.clear:hover {
+.clear:hover, .download:hover {
     background-color: beige;
 }
 
